chore:<add cities list in the cities.ts file>

--- a/weather/angular.json
+++ b/weather/angular.json
@@ -33,7 +33,10 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "angular-slickgrid", "stream"
+            ]
           },
           "configurations": {
             "production": {
