--- a/weather/package.json
+++ b/weather/package.json
@@ -18,7 +18,14 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "country-state-city": "^3.1.2",
+    "country-state-city-js": "^2.5.0",
+    "indian-cities-database": "^1.0.5",
+    "indian-cities-json": "^2.0.0",
+    "ng2-search-filter": "^0.5.1",
+    "ngx-google-places-autocomplete": "^2.0.5",
     "rxjs": "~7.5.0",
+    "stream-browserify": "^3.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
